@@ -1,0 +1,9 @@
+use strict;
+use warnings FATAL => 'all';
+
+use Test::More;
+use Test::CleanNamespaces;
+
+all_namespaces_clean();
+
+done_testing;
